# ECAP5-BSOM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
docs/: CMakeLists.txt
docs/simulations/: plane-1v1.step  test.msh  test.step
docs/simulations/plane-1v1/: case.sif  mesh.boundary  mesh.elements  mesh.header  mesh.nodes
docs/simulations/test/: case.sif  case_t0001.vtu  mesh.boundary  mesh.elements  mesh.header  mesh.nodes
docs/src/: conf.py  index.rst  pinout.rst
docs/src/arch/: 1_introduction.rst  2_requirements.rst  2_user_needs.rst  3_requirements.rst  4_overview.rst  5_design.rst  index.rst
docs/src/assets/: buck-1V1.prj  buck-1V8.prj  buck-2V5.prj  buck-3V3.prj  ddr2-pinout.csv  emmc-pinout.csv  flash-pinout.csv  io-pinout.csv  io-pinout.drawio  ldo-1V1.drawio  lfe5um-85f-pinout.csv  osc-pinout.csv  overview.drawio  pol.drawio  power-estimation.pcf  power-sequencing.drawio  sdram-pinout.csv  sram-pinout.csv
docs/src/design/: 10_emmc.rst  10_flash.rst  11_clock.rst  11_flash.rst  12_clock.rst  12_io.rst  13_misc.rst  14_mechanical.rst  15_routing.rst  1_introduction.rst  2_specification.rst  3_system_overview.rst  4_design_considerations.rst  4_power.rst  5_fpga.rst  5_power.rst  6_fpga.rst  6_sram.rst  7_sdram.rst  7_sram.rst  8_ddr2.rst  8_sdram.rst  9_ddr2.rst  9_emmc.rst  index.rst
production-files/: bom.csv  ecap5-bsom-frame.kicad_prl  ecap5-bsom-frame.kicad_pro  pick-and-place.csv  rev-1.0-batch1-bom.xls
production-files/gerber/: ecap5-bsom-frame-B_Cu.gbl  ecap5-bsom-frame-B_Mask.gbs  ecap5-bsom-frame-B_Paste.gbp  ecap5-bsom-frame-B_Silkscreen.gbo  ecap5-bsom-frame-Edge_Cuts.gm1  ecap5-bsom-frame-F_Cu.gtl  ecap5-bsom-frame-F_Mask.gts  ecap5-bsom-frame-F_Paste.gtp  ecap5-bsom-frame-F_Silkscreen.gto  ecap5-bsom-frame-In1_Cu.g1  ecap5-bsom-frame-In2_Cu.g2  ecap5-bsom-frame-In3_Cu.g3  ecap5-bsom-frame-In4_Cu.g4  ecap5-bsom-frame-In5_Cu.g5  ecap5-bsom-frame-In6_Cu.g6  ecap5-bsom-frame-NPTH-drl_map.gbr  ecap5-bsom-frame-NPTH.drl  ecap5-bsom-frame-PTH-drl_map.gbr  ecap5-bsom-frame-PTH.drl
src/: ddr.kicad_sch  ddr2.kicad_sch  ecap5-bsom.kicad_pcb  ecap5-bsom.kicad_pro  ecap5-bsom.kicad_sch  ecap5-title-block.kicad_wks  emmc.kicad_sch  flash.kicad_sch  fp-lib-table  fpga-bank0.kicad_sch  fpga-bank1.kicad_sch  fpga-bank2.kicad_sch  fpga-bank3.kicad_sch  fpga-bank4.kicad_sch  fpga-bank6.kicad_sch  fpga-bank7.kicad_sch  fpga-bank8.kicad_sch  fpga-config.kicad_sch  fpga-power.kicad_sch  fpga.kicad_sch  io-connector-1.kicad_sch  io-connector-2.kicad_sch  io-connector.kicad_sch  mechanical.kicad_sch  panel-configuration.json  power-buck-1v1.kicad_sch  power-buck-1v8.kicad_sch  power-buck-2v5.kicad_sch  power.kicad_sch  sdram.kicad_sch  sram.kicad_sch  sym-lib-table  symbols.kicad_sym  untitled.kicad_sch
src/footprints.pretty/: 74404052220.kicad_mod  744770127.kicad_mod  744774127.kicad_mod  ASFC4G31M-51BIN.kicad_mod  Bourns_SRN6045.kicad_mod  Bourns_SRN8040.kicad_mod  Coilcraft_XAL4020.kicad_mod  Coilcraft_XAL4030.kicad_mod  DDR4_SODIMM_Board.kicad_mod  ETQ-P3M2R2KVP.kicad_mod  ETQ-P5M220YFC.kicad_mod  IS42S16160J-_BL.kicad_mod  IS43DR86400E.kicad_mod  IS61WV25616BLL-_BLI.kicad_mod  L6981.kicad_mod  LFE5U-85F-_BG756C.kicad_mod  LM3880.kicad_mod  Logo.kicad_mod  QRCODE.kicad_mod  ST1S41PHR.kicad_mod  TI_DRL0006A.kicad_mod  TLV760.kicad_mod  W25Q128JVP.kicad_mod  XLH335040.000000I.kicad_mod
src/footprints.pretty/models/: 74404052220.stp  ASFC4G31M-51BIN.stp  Bourns_SRN6045.stp  Bourns_SRN8040.stp  Coilcraft_XAL4020.stp  ETQ-P5M220YFC.stp  IS42S16160J-*BL.stp  IS43DR86400E.stp  IS61WV25616BLL-*BLI.stp  L6981.stp  LFE5U-85F-*BG756.stp  XLH335040.000000I.stp
src/schematics/: _autosave-power.kicad_sch  clock.kicad_sch  ddr2.kicad_sch  emmc.kicad_sch  flash.kicad_sch  fpga-bank0.kicad_sch  fpga-bank0.kicad_sche  fpga-bank1.kicad_sch  fpga-bank2.kicad_sch  fpga-bank3.kicad_sch  fpga-bank4.kicad_sch  fpga-bank6.kicad_sch  fpga-bank7.kicad_sch  fpga-bank8.kicad_sch  fpga-power.kicad_sch  fpga.kicad_sch  io-connector-1.kicad_sch  io-connector-2.kicad_sch  io-connector.kicad_sch  jtag.kicad_sch  leds.kicad_sch  mechanical.kicad_sch  power-buck-1v1.kicad_sch  power-buck-1v8.kicad_sch  power-buck-2v5.kicad_sch  power-buck-3v3.kicad_sch  power.kicad_sch  sdram.kicad_sch  sram.kicad_sch
