find_package(Sphinx)

if(Sphinx_FOUND)
  add_sphinx_document(
      documentation
      CONF_FILE "${CMAKE_CURRENT_LIST_DIR}/src/conf.py"
      SKIP_PDF
      "${CMAKE_CURRENT_LIST_DIR}/src/_ext/requirement.py"
      "${CMAKE_CURRENT_LIST_DIR}/src/_static/css/custom.css"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/logo.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/io-pinout.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/flash-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/emmc-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/sram-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/sdram-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/ddr2-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/osc-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/io-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/overview.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-logic.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-bram.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-serdes.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-io.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-summary.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/pol.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V1.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V1-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-2V5.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-2V5-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/index.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/index.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/1_introduction.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/2_user_needs.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/3_requirements.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/4_overview.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/arch/5_design.rst"
    )
else()
  message(WARNING "No Sphinx found. Documentation target not available.")
endif()
