find_package(Sphinx)

if(Sphinx_FOUND)
  add_sphinx_document(
      documentation
      CONF_FILE "${CMAKE_CURRENT_LIST_DIR}/src/conf.py"
      SKIP_PDF
      "${CMAKE_CURRENT_LIST_DIR}/src/_ext/requirement.py"
      "${CMAKE_CURRENT_LIST_DIR}/src/_static/css/custom.css"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/logo.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/io-pinout.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/flash-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/emmc-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/sram-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/sdram-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/ddr2-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/osc-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/io-pinout.csv"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/overview.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-summary.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V1.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V1-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-2V5.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-2V5-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-3V3.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-3V3-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V8.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/buck-1V8-eff.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/ldo-1V1.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/power-sequencing.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/conf-status.png"
      "${CMAKE_CURRENT_LIST_DIR}/src/assets/diagram-power-sequencing.svg"
      "${CMAKE_CURRENT_LIST_DIR}/src/index.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/index.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/1_introduction.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/2_specification.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/3_system_overview.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/4_power.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/5_fpga.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/6_sram.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/7_sdram.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/8_ddr2.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/9_emmc.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/10_flash.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/11_clock.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/12_io.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/13_misc.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/14_mechanical.rst"
      "${CMAKE_CURRENT_LIST_DIR}/src/design/15_analysis.rst"
    )
else()
  message(WARNING "No Sphinx found. Documentation target not available.")
endif()
